--- a/style.css
+++ b/style.css
@@ -1,82 +1,173 @@
 * {
     /* Свойства для сброса начальных стилей элементов */
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-body {}
+
+body {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    height: 100vh;
+}
 
 header {
     /* Стили для хедера */
+  
+    background-color: #0A61F7;
+    padding: 23px 0;
+    margin-bottom: 60px;
+    
 }
 
 header span {
     /* Стили для текста в хедере IT-INCUBATOR */
+font-weight: 700;
+font-size: 20px;
+color: #fff;
 }
 
 .main-section {
     /* Стили для первой секции */
+   
+height: 1024px;
+background-color: #fafaff;
+padding-bottom: 382px;
+    
 }
 
 .main-title {
     /* Стили для заголовка в первой секции */
+color: #303030;
+ font-weight: 700;
+font-size: 48px;
+line-height: 58px;
+margin-bottom: 20px;
+margin-top: 60px;
 }
 
 .main-text {
     /* Стили для текста в первой секции */
+    color: #303030;
+   font-weight: 400;
+font-size: 18px;
+line-height: 22px;
 }
 
 .main-image {
     /* Стили для изображения в первой секции */
+    width: 715px;
+    height: 508px;
 }
 
 
 .about-section {
     /* Стили для второй секции */
+    background-color: #fff;
+    padding: 60px 0 100px;
+ 
 }
 
 select {
     /* Стили для выпадающего списка */
+    width: 150px;
+height: 36px;
+
 }
 
 .section-title {
     /* Стили для заголовков во второй секции */
+font-weight: 700;
+font-size: 24px;
+color: #303030;
+margin-bottom: 25px;
 }
 
 .frameworks-list {
     /* Стили для маркированного списка во второй секции */
+    width: 80px;
+height: 57px;
 }
 
 .books-list {
     /* Стили для нумерованного списка во второй секции */
+    width: 670px;
+height: 57px;
 }
 
 .label {
     /* Стили для подписей чекбоксов */
+    width: 80px;
+height: 19px;
 }
 
 .text-field {
     /* Стили для односточного поля ввода текста */
+    height: 36px;
+    width: 330px;
+font-weight: 400;
+font-size: 16px;
+color: rgba(48, 48, 48, 0.2);
+border-radius: 5px;
+
 }
 
 .btn {
     /* Стили для кнопки */
+    border-radius: 5px;
+width: 125px;
+height: 36px;
+background: #2965f1;
+font-family: "Inter", sans-serif;
+font-weight: 700;
+font-size: 14px;
+color: #fff;
+border-color: #2965f1;
+padding: 10px 0;
+
 }
 
 .line {
     /* Стили для линии */
+    border: 1px solid rgba(48, 48, 48, 0.3);
+
+height: 0px;
+
+
 }
 
 table {
     /* Стили для таблицы */
+border-collapse:collapse ;
+width: 300px;
+height: 196px;
+
+margin-top: 60px;
 }
 
 th, td {
     /* Стили для ячеек таблицы */
+    width: 300px;
+    padding: 11px 0;
+    text-align:left;
+
 }
 
 footer {
     /* Стили для футера */
+    background: rgba(163, 167, 255, 0.3);
+height: 70px;
+padding: 27px 0;
+
 }
 
 .footer-link {
     /* Стили для футера */
+    width: 78px;
+height: 17px;
+  font-weight: 400;
+font-size: 14px;
+color: #2965f1;
+text-decoration: none;
 }
