--- a/style.css
+++ b/style.css
@@ -143,13 +143,13 @@ border-collapse:collapse ;
 width: 300px;
 height: 196px;
 
-margin-top: 60px;
+margin: 60px 0;
 }
 
 th, td {
     /* Стили для ячеек таблицы */
     width: 300px;
-    padding: 11px 0;
+    padding: 12px 15px;
     text-align:left;
 
 }
@@ -158,7 +158,7 @@ footer {
     /* Стили для футера */
     background: rgba(163, 167, 255, 0.3);
 height: 70px;
-padding: 27px 0;
+padding: 26px 0;
 
 }
 
