--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ height: 57px;
     /* Стили для нумерованного списка во второй секции */
     width: 670px;
 height: 57px;
+padding: 0px 20px;
 }
 
 .label {
