--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ height: 57px;
     /* Стили для нумерованного списка во второй секции */
     width: 670px;
 height: 57px;
-padding: 0px 20px;
+/* padding: 0px 20px; */
 }
 
 .label {
@@ -115,7 +115,7 @@ font-weight: 400;
 font-size: 16px;
 color: rgba(48, 48, 48, 0.2);
 border-radius: 5px;
-
+margin-bottom: 60px;
 }
 
 .btn {
@@ -148,7 +148,7 @@ border-collapse:collapse ;
 width: 300px;
 height: 196px;
 
-margin: 60px 0;
+margin-top: 120px;
 }
 
 th, td {
