--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ font-family: "Inter", sans-serif;
 header {
     /* Стили для хедера */
   
-    background-color: #0A61F7;
+   background: rgb(41, 101, 241);
     padding: 23px 0;
     margin-bottom: 60px;
     
@@ -34,8 +34,7 @@ color: #fff;
     /* Стили для первой секции */
    
 height: 1024px;
-background-color: #fafaff;
-padding-bottom: 382px;
+padding: 60px 0px;
     
 }
 
@@ -59,8 +58,8 @@ line-height: 22px;
 
 .main-image {
     /* Стили для изображения в первой секции */
-    max-width: none;
-    height: 508px;
+    max-width: 715px;
+    
 }
 
 
@@ -77,11 +76,13 @@ width: 150px;
 height: 36px;
 font-weight: 400;
 font-size: 16px;
-/* background: rgba(255, 255, 255, 0); */
+background: no-repeat;
 border-radius: 5px;
 border: 1px solid rgba(48, 48, 48, 0.3);
 padding: 8px 12px 88px 8px;
+
 }
+
 
 .section-title {
     /* Стили для заголовков во второй секции */
@@ -146,7 +147,7 @@ padding: 10px 0;
 .line {
     /* Стили для линии */
     border: 1px solid rgba(48, 48, 48, 0.3);
-
+margin: 60px 0px;
 height: 0px;
 
 
@@ -157,7 +158,7 @@ table {
 border-collapse:collapse ;
 width: 300px;
 height: 196px;
-font-size: 16px;
+font-size: 14px;
 margin-top: 120px;
 }
 
